package clean.state;

import clean.CeilingFanPullChain;

public interface SpeedState {

    void pull(CeilingFanPullChain wrapper);
}
